Ingress&ALB/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxnetology-ingress
  namespace: default
  annotations:
    ingress.alb.yc.io/group-name: default
    ingress.alb.yc.io/subnets: b0cmmo5v5g0mhgf0abg3,e2lva8rhj7qh20c3id7o,e9bqpb7pub4b4m9hbnjp
    ingress.alb.yc.io/security-groups: enptefmc0tb2jorko4dq
    ingress.alb.yc.io/external-ipv4-address: auto
    ingress.alb.yc.io/prefix-rewrite: "/"
spec:
  tls:
    - hosts:
        - prod.clllagob.ru
      secretName: yc-certmgr-cert-id-fpq1i7l3pgo0nvdc8ms3
  rules:
    - host: prod.clllagob.ru
      http:
        paths:
          - pathType: Prefix
            path: "/myapp"
            backend:
              service:
                name: nginxnetology-service
                port:
                  name: httpc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    ingress.alb.yc.io/group-name: default
    ingress.alb.yc.io/subnets: b0cmmo5v5g0mhgf0abg3,e2lva8rhj7qh20c3id7o,e9bqpb7pub4b4m9hbnjp
    ingress.alb.yc.io/security-groups: enptefmc0tb2jorko4dq
    ingress.alb.yc.io/external-ipv4-address: auto
    ingress.alb.yc.io/prefix-rewrite: ""
spec:
  tls:
    - hosts:
        - prod.clllagob.ru
      secretName: yc-certmgr-cert-id-fpq1i7l3pgo0nvdc8ms3
  rules:
    - host: prod.clllagob.ru
      http:
        paths:
          - pathType: Prefix
            path: "/grafana"
            backend:
              service:
                name: grafana
                port:
                  name: http
